index.txt
>>> print(studentCode)
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
NameError: name 'studentCode' is not defined
>>> for i in range(10)
  File "<stdin>", line 1
    for i in range(10)
                      ^
SyntaxError: expected ':'
>>> studentID = {"a":1, "b":2}
>>> print(studentID["c"])
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
KeyError: 'c'
>>> classID = (1,2,3,4,5,6,7,8,9,10)
>>> print(classID[11])
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
IndexError: tuple index out of range
>>> open ("student.pdf","r")
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
FileNotFoundError: [Errno 2] No such file or directory: 'student.pdf'